# token-scan-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: errors.rs  main.rs
src/api/: errors.rs  jupiter_api_client.rs  mod.rs  models.rs  traits.rs
src/api/jupiter/: jupiter_api_client.rs  mod.rs  models.rs
src/api/moralis/: constants.rs  mod.rs  models.rs  moralis_api_client.rs
src/bot/: commands.rs  handlers.rs  mod.rs
src/db/: database.rs  mod.rs  models.rs
src/db/repositories/: guild.rs  mod.rs  token.rs  token_scan.rs  traits.rs  user.rs
src/utils/: message_parser.rs  mod.rs  token_message_builder.rs
