[package]
name = "contract_scanner_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["full"]}
tokio = { version = "1.46.1", features = ["full"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
poise = "0.6.1"
reqwest = "0.12.22"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
once_cell = "1.21.3"
regex = "1.11.1"
async-trait = "0.1.88"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
chrono = "0.4.41"
deadpool-postgres = "0.14.1"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.14"

